fix : responsive on small screen

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -79,3 +79,7 @@ a:-webkit-any-link:focus-visible {
 .backdrop-blur-3xl {
     background-color: #00000075;
 }
+
+.min-w-16 {
+    min-width: 3.7rem; /* 64px */
+}	
